<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Caek</string>
    <string name="resolve_stalemates">Manage modules</string>
    <string name="resolve_stalemates_category_key">com.example.aperture.core.RESOLVE_STALEMATES</string>

    <string name="contacts_module_label">Contacts</string>
    <string name="email_module_label">Email</string>
    <string name="launcher_module_label">Launcher</string>
    <string name="phone_module_label">Phone</string>
    <string name="search_module_label">Search</string>
    <string name="web_module_label">Browser</string>

    <string name="speech_try_again">Touch to speak</string>
    <string name="speech_listening">Speak now</string>

    <string name="title_menu_txt">Type query</string>
    <string name="title_menu_num">Numpad</string>
    <string name="title_menu_img">Picture</string>
    <string name="title_menu_vid">Video</string>
</resources>
